--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/planets_db
 spring.datasource.username=postgres
 spring.datasource.password=orapass
+
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath*:database/initDB.sql
+#spring.sql.init.data-locations=classpath*:database/populateDB.sql
+
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 
-error.message= Поля должны быть заполнены!
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+error.message= Fields must be infected!
 spring.thymeleaf.cache=false
