--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.check_nullability=false
 
 error.message= Fields must be infected!
 spring.thymeleaf.cache=false
