adding the ability to edit a record

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=orapass
 
 spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath*:database/initDB.sql
+#spring.sql.init.schema-locations=classpath*:database/initDB.sql
 #spring.sql.init.data-locations=classpath*:database/populateDB.sql
 
 
@@ -13,7 +13,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.check_nullability=false
+#spring.jpa.properties.hibernate.check_nullability=false
 
 error.message= Fields must be infected!
 spring.thymeleaf.cache=false
